MULE-6544 Allow MaxPermSize to be more easily modified for a Mule Standalone instance